update sensor2 api example
